# varlor

./: .gitmodules  ARCHITECTURE.md  AUDIT.md  AUDIT_DOCUMENTATION.md  CONTRIBUTING.md  DATABASE.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  SECURITY.md  STACK.md  VERIFICATION_SWAGGER.md  docker-compose.yml
calculations-api/: .gitignore  CMakeLists.txt  Doxyfile  main.cpp
calculations-api/Controllers/: AnalysisController.cpp  AnalysisController.hpp  README.md
calculations-api/Core/: BuiltinOperations.cpp  BuiltinOperations.hpp  DataPreprocessor.cpp  DataPreprocessor.hpp  ExpressionExecutor.cpp  ExpressionExecutor.hpp  IndicatorEngine.cpp  IndicatorEngine.hpp  MathOperationParser.cpp  MathOperationParser.hpp  README.md
calculations-api/Models/: DataPoint.hpp  Dataset.hpp  FieldType.hpp  OperationDefinition.hpp  OperationResult.hpp  PreprocessingReport.hpp  PreprocessingResult.hpp  README.md
calculations-api/build-ninja/: .ninja_deps  .ninja_log  DartConfiguration.tcl  calculations_api  test_core  test_models
calculations-api/build-ninja/Testing/Temporary/: CTestCostData.txt
calculations-api/docs/html/: _data_point_8hpp.html  _data_point_8hpp.js  _data_point_8hpp_source.html  _dataset_8hpp.html  _dataset_8hpp.js  _dataset_8hpp_source.html  _field_type_8hpp.html  _field_type_8hpp.js  _field_type_8hpp_source.html  _preprocessing_report_8hpp.html  _preprocessing_report_8hpp.js  _preprocessing_report_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classvarlor_1_1models_1_1_data_point-members.html  classvarlor_1_1models_1_1_data_point.html  classvarlor_1_1models_1_1_data_point.js  classvarlor_1_1models_1_1_dataset-members.html  classvarlor_1_1models_1_1_dataset.html  classvarlor_1_1models_1_1_dataset.js  classvarlor_1_1models_1_1_preprocessing_report-members.html  classvarlor_1_1models_1_1_preprocessing_report.html  classvarlor_1_1models_1_1_preprocessing_report.js  dir_22305cb0964bbe63c21991dd2265ce48.html  dir_22305cb0964bbe63c21991dd2265ce48.js  doxygen.css  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  index.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  namespaces.html  namespaces_dup.js  namespacevarlor.html  (+5 more)
calculations-api/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  (+34 more)
calculations-api/tests/controllers/: test_AnalysisController.cpp
calculations-api/tests/core/: test_BuiltinOperations.cpp  test_DataPreprocessor.cpp  test_ExpressionExecutor.cpp  test_IndicatorEngine.cpp
calculations-api/tests/models/: test_DataPoint.cpp  test_Dataset.cpp  test_FieldType.cpp  test_PreprocessingReport.cpp
(+334 files in other folders)
